--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+	<title = "Kyle K">
   </head>
   <body>
-
-    <p>Hello, my name is Kyle!</p>
+	<h1>"Hello, Code School!."</h1>
+		<ul>Things I want to learn at Code School
+		  <li>JavaScript</li>
+		  <li>HTML/CSS</li>
+		
+		
+		
+		</ul>
+  
+    <p>"Hello, my name is Kyle!"</p>
 	
   </body>
 </html>
