--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title = "Kyle K">
   </head>
   <body>
-	<h1>"Hello, Code School!."</h1>
+	<h1>"Hello, Code School!"</h1>
 		<ul>Things I want to learn at Code School
 		  <li>JavaScript</li>
 		  <li>HTML/CSS</li>
