--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title = "Kyle K">
   </head>
   <body>
-	<h1>"Hello, Code School!"</h1>
+	<h1>Hello, Code School!</h1>
 		<ul>Things I want to learn at Code School
 		  <li>JavaScript</li>
 		  <li>HTML/CSS</li>
@@ -16,7 +16,7 @@
 		
 		</ul>
   
-    <p>"Hello, my name is Kyle!"</p>
+    <p>Hello, my name is Kyle!</p>
 	
   </body>
 </html>
